  criteria available as $test
- "omit" command: add a --test-only option to prevent the reduced model
  from being saved as "last model"
- "add" command: add an --lm option to do an LM test, in which case the
  last model is not replaced by the augmented version
- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- Add facility for inspecting the list of gretl addons, under the GUI
  Help menu
- Download of textbook data-file packages: use sourceforge for better
  reliability
- Graphing ("gnuplot" command and GUI): generalize the option of
  separation using a binary dummy to allow use of discrete variables
- "boxplot" command: add --factorized and --panel options; also
  enhance the boxplot options available via the GUI
- "arima" command (native exact ML variant): add a --hessian option to
  enforce computation of standard errors using the Hessian; if this
  option is not given, allow use of OPG as fallback if the numerical
  Hessian cannot be computed
- X-12-ARIMA and TRAMO analysis: allow the user to supply names when
  saving series to the dataset
- Declaration of new series: set initial values to NA, not zero
- On OS X: save downloaded functions, databases and data file packages
  to the user's "Library/Application Support/gretl" directory
- MS Windows and OS X packages: update gtksourceview library to version 
  2.10.5 to permit printing of scripts with highlighting
- Fix bug: a nested "foreach" loop using a named list, with the name of
  the list subject to dollar-substitution via the parent loop, produced
  an "unknown variable" error
- Fix bug: The symbol "<-" for assignment to an object could get confused
  with a mathematical expression such as "x<-1.0"
- Fix bug: reading beyond array bound in numerical Hessian
- Fix bug in GUI function-package editor: could crash on adding a new
  function to a package
- Fix bug in GUI function-package editor: "edit code" not working for